// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`History Api Fallback Should analyze if @route.historyApiFallback() combined with non GET method 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "[31m1. AnimalController.get(b) -> POST /animal/get[39m
[31m - error PLUM1021: History api fallback should have GET http method, in AnimalController.get(b)[39m",
  ],
  Array [],
]
`;

exports[`History Api Fallback Should fallback if requested by provide accept header html 1`] = `
"<!DOCTYPE html>
<html>
<head>
    <meta charset=\\"utf-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <title>Page Title</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" media=\\"screen\\" href=\\"main.css\\" />
    <script src=\\"main.js\\"></script>
</head>
<body>
    Lorem ipsum dolor
</body>
</html>"
`;

exports[`History Api Fallback Should not analyze non history api fallback method 1`] = `
Array [
  Array [],
  Array [
    "Route Analysis Report",
  ],
  Array [
    "1. AnimalController.get() -> POST /animal/get",
  ],
  Array [],
]
`;
